Fix table overflow on mobile

--- a/Lectures/Polish/Polish.css
+++ b/Lectures/Polish/Polish.css
@@ -1,3 +1,7 @@
 .playNow {
   margin-bottom: 8px;
 }
+
+#verbs-table-container {
+  overflow-x: scroll;
+}
